k8s/symbiosis/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symbiosis-canary
  labels:
    app: symbiosis
    track: canary
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: metrics
  selector:
    app: symbiosis
    track: canary
